# cora-matlab

./: .gitignore  CITATION.cff  README.md
MATLAB/: certify_solution.m  cora.m  cora_python_interface.m  data_analysis.m  main.asv  main.m  notebook.m  ra_slam.asv  ra_slam.m
MATLAB/custom_manifold/: MarginalizedRaSlamManifoldFactory.m  RaSlamManifoldFactory.m
MATLAB/examples/: multiple_experiments.m  single_experiment.m
MATLAB/lobpcg/: README.md
MATLAB/manopt/: CREDITS.txt  README.txt  importmanopt.m  manopt_version.m
MATLAB/manopt/examples/: dominant_invariant_subspace.m  dominant_invariant_subspace_complex.m  doubly_stochastic_denoising.m  elliptope_SDP.m  elliptope_SDP_complex.m  essential_svd.m  generalized_eigenvalue_computation.m  generalized_procrustes.m  low_rank_dist_completion.m  low_rank_matrix_completion.m  low_rank_tensor_completion.m  low_rank_tensor_completion_TT.m  low_rank_tensor_completion_embedded.m  maxcut.m  nonlinear_eigenspace.m  packing_on_the_sphere.m  positive_definite_intrinsic_mean.m  positive_definite_karcher_mean.m  robust_pca.m  run_all_examples.m  shapefit_smoothed.m  sparse_pca.m  thomson_problem.m  truncated_svd.m  using_counters.m  using_gpu.m
MATLAB/paper_plots/: plot_param_sweeps.m
MATLAB/paper_plots/utils/: get_num_poses_from_fpath_names.m  get_range_covs_from_fpath_names.m  get_suboptimality_gaps_from_results_fpaths.m
MATLAB/utils/io_utils/: get_experiment_filepaths_in_subdirs.m  get_pyfg_data.m  get_results_filepaths_in_subdirs.m  load_ra_slam_problem.m  parse_pyfg_text.m  (+1 more)
python/: setup.cfg  setup.py
(+426 files in other folders)
