[options]
install_requires = attrs==22.1.0
packages = find:

[metadata]
name = ra_cert
version = 0.1.0
description = A python library to certify range-aided SLAM
author = Alan Papalia
author_email = apapalia@mit.edu
url = https://github.com/MarineRoboticsGroup/range-only-certification
classifiers =
    Typing :: Typed

[options.packages.find]
exclude = examples*

[options.package_data]
py_factor_graph = py.typed
